--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./assets/styles/styles.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -24,8 +25,7 @@ a:hover {
   color: #535bf2;
 }
 
-#mainWrap {
-  background-color: #010200;
-  padding-top: 110px;
+.highcharts-credits {
+  display: none;
 }
 
