--- a/src/style.css
+++ b/src/style.css
@@ -8,12 +8,19 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body {
+  background: #010200;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100dvh;
 }
 
 a {
@@ -29,3 +36,6 @@ a:hover {
   display: none;
 }
 
+.primarygreen {
+    color: #7DBA28;
+}
